test/expressions/diten/uintHexOverflow.good
error: uintHexOverflow.chpl:1: Integer literal overflow: '0x10000000000000000' is too big for type uint64
