test/expressions/diten/uintHexOverflow.chpl
var x = 0x10000000000000000;
writeln(x);
